--- a/plutus-book/doc/05-welcome.adoc
+++ b/plutus-book/doc/05-welcome.adoc
@@ -106,58 +106,5 @@ Vesting examples. We will discuss these in the corresponding example chapters.
 There is also a link to the Plutus tutorial, which shares a lot of content
 with the chapters of this book.
 
-=== Docker Plutus Playground Image Instructions
-
-Plutus Playground can also be compiled directly from source
-code or run from an image using docker. If you have access to a docker image
-of Plutus Playground, follow the instructions below.
-
-You will need to install and run docker
-to host the Playground. You should download the installers to the USB key:
-
-Mac: https://hub.docker.com/editions/community/docker-ce-desktop-mac
-Windows: https://hub.docker.com/editions/community/docker-ce-desktop-windows
-Linux: depends on your distribution
-
-All the instructions for installing docker can be found at
-https://docs.docker.com/ , just go to the menu on the left "Get Docker -> Docker CE".
-
-.To run Plutus Playground:
-* Make sure the computer you are running this on has docker installed and running
-* Copy `docker-image-plutus-playgrounds.tar.gz` to the computer you will be running it on
-* Run `docker load < docker-image-plutus-playgrounds.tar.gz` - this will
-print out the image name at the end, e.g. `Loaded image: plutus-playgrounds:yn7h7m5qdjnnj9rxv8cgkvvwjkkcdnvp`
-* Run `docker run -p 8080:8080 plutus-playgrounds:yn7h7m5qdjnnj9rxv8cgkvvwjkkcdnvp`
-you should now be able to see Plutus Playground on http://localhost:8080/
-
-You should see a similar editor window to the one at the PP web address provided.
-Note that the PP version (and thus, of course, some of the functionality and
-appearance) may be different than the web version.
-
-
-=== Using the libraries locally
-
-To use the libraries (not the Playground) locally, follow these steps.
-
-.Linux/macOS
-
-[arabic]
-. Install the nix package manager following the instructions on
-https://nixos.org/nix/.
-+
-IMPORTANT: Make sure to add the IOHK binary cache to your Nix configuration. See
-link:../README.md#binary-caches[the repository README] for details.
-. Clone https://github.com/input-output-hk/plutus.
-. Move to the plutus-tutorial folder.
-. Type `nix-shell`. This will download all of the dependencies and
-populate the PATH with a correctly configured cabal. If `nix-shell`
-results in nix attempting to compile a lot of dependencies then
-something went wrong earlier and you should go back to step 4.
-. Type `cabal repl plutus-tutorial`.
-
-.Windows
-
-[arabic]
-. Install the "Ubuntu 18.04" app from the app store
-. Open the "Ubuntu 18.04" terminal by clicking on the icon
-
+For advanced usage instructions, including setting up a local Docker image of the
+Plutus Playground, or using the Haskell libraries locally, see the {repo}[Plutus repository README].
