--- a/plutus-book/doc/plutus.adoc
+++ b/plutus-book/doc/plutus.adoc
@@ -1,7 +1,8 @@
 = Plutus: Writing reliable smart contracts
 :authors: Lars Brünjes, Polina Vinogradova
 :email: plutus@iohk.io
-:orgname: IOHK
+:orgname: Input Output HK Limited
+:copyright: Copyright 2019 {orgname}
 :doctype: book
 :toc: left
 :sectnums:
