--- a/plutus-book/doc/09-extended.adoc
+++ b/plutus-book/doc/09-extended.adoc
@@ -1,5 +1,5 @@
 [#09-extended]
-= Shelley Script-Extended UTxO Model
+= Extended UTxO Model
 
 This chapter is geared towards the reader that wants to have a clearer picture
 of just where Plutus fits in on Cardano Shelley
@@ -19,7 +19,10 @@ The extension has two components:
 transactions and the corresponding processing scheme performed by the nodes
 . an
 extension to the wallet backend to facilitate off-chain code that coordinates
-the execution of on-chain computations.
+the execution of on-chain computations
+- Note that an extended UTxO wallet must have access to ledger data in
+order to be able to watch (or to look up) outputs at specified addresses
+at any time
 
 In this chapter, we focus on the first component.
 In the extended UTxO model, additional on-chain computations must be done to
@@ -45,19 +48,25 @@ the reward address)
 * genesis key delegations
 
 For a detailed formal description of
-this type of accounting, we refer the reader again to <<bibliography#bibliography>>.
+this type of accounting, we refer the reader again to <<deleg>>.
 A major way to extend the functionality of the Cardano ledger is by adding
 script capability to the second step.
 
 == Scripts
 
-Scripts (specifically, Plutus scripts) are Plutus Core expressions carried by
-a transaction. Scripts are a way to add smart contract functionality
-to the extended UTxO model. Many of the subsequent chapters of this book discuss building and
-executing scripts that define specific smart contracts. In this section, however,
+Recall from the <<10-PlutusTx#10-PlutusTx>> chapter that
+scripts (specifically, Plutus scripts) are Plutus Core expressions carried by
+a transaction (or stored on the ledger). They are defined inside a specially-delimited
+sections of a Haskell program, called Plutus Tx, which are then compiled into
+Plutus Core.
+
+Scripts are a way to add smart contract functionality
+to the extended UTxO model.
+Many of the subsequent chapters of this book discuss building scripts
+that define specific smart contracts. In this section, however,
 we discuss in general how scripts are used in the extended UTxO model.
 For a draft of the formal specification of the extended UTxO model with
-scripts, see <<bibliography#bibliography>>.
+scripts, see <<scripts>>.
 
 Scripts, like witnesses, are another
 tool to make sure a transaction is performing only authorized actions.
@@ -293,7 +302,7 @@ any of them.
 In the real Cardano blockchain environment, on- and off-chain
 contract code is meant to be used by all wallets participating in the contract,
 distributed over the network. This means there needs to be another reliable way
-to share Plutus code. The on-chain code is hashed, and the hash is stored in the
+to share Plutus code. The the on-chain code is hashed, and the hash is stored in the
 UTxO, giving the participants a way to verify that it is indeed the right code
 for the right contract. The off-chain code is simply a way to generate
 scripts and transactions, which then get validated and authenticated as
@@ -316,17 +325,3 @@ rolled back transaction. We do not give the details of this functionality here.
 
 There are other features of the extended UTxO system that are less relevant to
 a Plutus user, which we will also not explain in detail in this chapter.
-
-.Adding Ledger Functionality Using Scripts
-
-In the upcoming examples in this book we walk the reader through the process
-of building, testing and using Plutus contracts. For examples of work on using
-scripts to add specific functionality to the UTxO ledger, we would like to
-point the reader to the following documents,
-
-* Multi-currency on the UTXO Ledger, see <<bibliography#bibliography>>
-- An implementation of a script-based model for different types of
-currency as well as non-fungible tokens on the mockchain
-* A Formal Specification of a Multi-Signature Scheme Using Scripts, see <<bibliography#bibliography>>
-- A formal specification of enforcing a custom witnessing policy for spending
-outputs
