--- a/plutus-book/doc/plutus.adoc
+++ b/plutus-book/doc/plutus.adoc
@@ -27,21 +27,36 @@
 :2c: ::
 
 :repo: https://github.com/input-output-hk/plutus
+:playgrounds: https://prod.playground.plutus.iohkdev.io/
+:alpha-playgrounds: https://alpha.plutus.iohkdev.io/
 
 // If we're not producing a book, then we want to offset the levels so the
 // headings are level 1 headings. For the book they need to be level 0 headings.
 ifndef::ebook-format[:leveloffset: +1]
-// Include each chapter here
+// Include each chapter here. The line breaks ensure that things don't get glued
+// together when they're included.
 include::01-preface.adoc[]
+
 include::03-UTxO.adoc[]
+
 include::04-smartcont.adoc[]
+
 include::05-welcome.adoc[]
+
 include::10-PlutusTx.adoc[]
+
 include::09-extended.adoc[]
+
 include::off-chain/off-chain.adoc[]
+
 include::game/game.adoc[]
+
 include::parameters/parameters.adoc[]
+
 include::multi/multi.adoc[]
+
 include::token/token.adoc[]
+
 include::02-glossary.adoc[]
+
 include::bibliography.adoc[]
